# forgequarantine

./: PROJECT_REPORT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.pgf/: DESIGN-ForgeQuarantine.md  VERIFY-ForgeQuarantine.md  status-ForgeQuarantine.json
examples/: component_manifest.json  crypto_dependencies.json  forgequarantine_report.json  forgequarantine_report.md  service_life.json
src/forgequarantine/: __init__.py  adapters.py  cli.py  compiler.py  models.py  report.py  validate.py
tests/: test_cli.py  test_compiler.py
