[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forgequarantine"
version = "0.1.0"
description = "Additive-manufacturing PQC exposure ledger for qualified components."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "IdeaFirst"}]
keywords = ["pqc", "additive-manufacturing", "aerospace", "defense", "crypto-agility"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
]

[project.scripts]
forgequarantine = "forgequarantine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

